Do not close underlying channel for cached zip
By default, the underlying channels of a ZipFileSystem
gets closed if a consumer thread is aborted.
As we want to share the same object with multiple threads,
including some that might get aborted; we try to enforce
setUninterruptable() -with reflection until we find a better
way-.